# customer-service-system

./: README.md  pyproject.toml
customer_service_system/data/: nps_answers.csv  products.json
customer_service_system/models/: ChartGenerator.py  Feedback.py  SentimentAnalyzer.py
customer_service_system/notebooks/: examples.ipynb
customer_service_system/src/: main.py
customer_service_system/utils/: utils.py
src/: cs_system.ipynb  main.py  nps.py  utils.py
